<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.MainActivity"
    android:background="#000000">

    <io.tourox.mobileapp.activities.widgets.RadialGradientView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:centerX=".5"
        app:centerY=".5"
        app:endColor="#ff000000"
        app:startColor="#ff666666"
        app:gradientRadiusWidthPercent=".9"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:id="@+id/logoImageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="38dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_subtitle"
            android:id="@+id/textView"
            android:gravity="center_horizontal"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/step_carousel"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/step1_description"
            android:id="@+id/stepDescriptionTextView"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/volumeDownImageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_volume_mute_white_36dp"
            android:contentDescription="@string/volume_mute"
            android:layout_weight="0"
            android:layout_marginLeft="5dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/volumeSeekBar"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/volumeUpImageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_volume_up_white_36dp"
            android:contentDescription="@string/volume_up"
            android:layout_weight="0"
            android:layout_marginRight="8dp" />

    </LinearLayout>


</RelativeLayout>
